# BlocksGest

./: .replit  Pasted-RROR-main-Exception-on-inventory-GET-Traceback-most-recent-call-last-File-home-runner-Bl-1726891102310.txt  Pasted-The-above-exception-was-the-direct-cause-of-the-following-exception-Traceback-most-recent-call--1726839410149.txt  babel.cfg  check_db_config.py  config.py  inspect_raw_material.py  main.py  models.py  pyproject.toml  routes.py  update_raw_materials.py  utils.py
migrations/versions/: 3bde5190d2bb_add_unit_price_to_rawmaterial.py  e24132d45f00_add_block_type_to_finishedgood_.py
static/css/: styles.css
static/js/: inventory.js  production.js  reports.js  sales.js
templates/: base.html  index.html  inventory.html  labor.html  production.html  purchase_orders.html  quality_control.html  reports.html  sales.html  suppliers.html  transaction_details.html
translations/ar/LC_MESSAGES/: messages.mo  messages.po
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/fr/LC_MESSAGES/: messages.mo  messages.po
