[tool.poetry]
name = "repl-nix-blocksmanage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-babel = "^4.0.0"
pandas = "^2.2.2"
statsmodels = "^0.14.3"
flask-migrate = "^4.0.7"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
